# haskell-monkey

./: .gitignore  .hlint.yaml  cabal.project  haskell-monkey.cabal  justfile  readme.md
app/: Main.hs  Token.hs
src/: Ast.hs  Env.hs  Eval.hs  Lexer.hs  Main.hs  Object.hs  Parser.hs  Token.hs
test/: EvalSpec.hs  LexerSpec.hs  ParserSpec.hs
