cabal-version: 3.0
name:          haskell-monkey
version:       0.1.0.0
license:       MIT
author:        Jared Henderson
maintainer:    jared@netrivet.com
build-type:    Simple

common warnings
  ghc-options: -Wall

executable haskell-monkey
  import:           warnings
  main-is:          Main.hs
  other-modules:    Token, Lexer, Parser, Ast, Object, Eval
  build-depends:    base ^>=4.17.2.1, mtl
  hs-source-dirs:   src, test
  default-language: Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test, src
  build-depends:      base, hspec, mtl
  other-modules:      LexerSpec, Lexer, Token, Parser,
                      Ast, ParserSpec, Object, Eval, EvalSpec
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  default-language:   Haskell2010

